[#367] Centering phone preview (#376)
* [#367] Centering phone preview

* [#367] Simplifying preview code

* [#367] Adding preview link

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -2,6 +2,12 @@
   .border-radius(6px, 6px, 6px, 0);
 }
 
+.preview-link {
+  left: 15px;
+  bottom: 5px;
+  position: absolute;
+}
+
 .createButton{
   .panel-heading a:after {
     font-family:'Glyphicons Halflings';
