--- a/public/stylesheets/less/vxb-widget.less
+++ b/public/stylesheets/less/vxb-widget.less
@@ -372,6 +372,7 @@
 }
 
 .vox-widget-wrapper-preview {
+  margin:0 auto;
   width: 315px;
   font-family: 'Open Sans', sans-serif;
   color: #343c3e;
