--- a/views/voxbone_widget_div.jade
+++ b/views/voxbone_widget_div.jade
@@ -3,6 +3,7 @@
   data-text="#{label}"
   data-redirect_url=the_widget.link_button_to_a_page || undefined
   data-did="#{did}"
+  data-custom_color=the_widget.button_color || undefined
   data-context=the_widget.context || undefined
   data-send_digits=the_widget.send_digits || undefined
   data-caller_id=the_widget.caller_id || undefined
