--- a/views/widget/edit.jade
+++ b/views/widget/edit.jade
@@ -1,24 +1,26 @@
 extends ../layout
 
 block extra_head
-  link(href="/stylesheets/vxb-widget.css", rel="stylesheet")
+  link(href="/stylesheets/vxb-widget.css" rel="stylesheet")
+  link(href="/lib/angular-bootstrap-colorpicker/css/colorpicker.min.css" rel="stylesheet")
 
 block content
   script.
     require([
       'angular',
       'angular-sanitize',
+      'angular-bootstrap-colorpicker',
       'jquery',
       'controllers/widget.edit',
       'directives/qtip',
       'directives/http.prefix'
     ],
     function(
-      angular, ngSanitize, $,
+      angular, ngSanitize, colorPicker, $,
       WidgetEditController, qtipDirective,
       httpPrefixDirective) {
 
-        angular.module('voxboneApp', ['ngSanitize'])
+        angular.module('voxboneApp', ['ngSanitize','colorpicker.module'])
           .directive('qtip', qtipDirective)
           .directive('httpPrefix', httpPrefixDirective)
           .controller('EditWidgetController', WidgetEditController);
@@ -50,7 +52,7 @@ block content
                 .boxPanel
                   .form-group
                     label Configuration Name:
-                    input.form-control(type="text", name="configuration_name", ng-model="widget.configuration_name" placeholder="i.e. Sales Button")
+                    input.form-control(type="text" name="configuration_name" ng-model="widget.configuration_name" placeholder="i.e. Sales Button")
               section
                 span.title Button Configuration
                 .boxPanel
@@ -59,6 +61,7 @@ block content
                     input.form-control(type="text", name="button_label", ng-model="widget.button_label" value="#{defaultBtnLabel}" placeholder="i.e. #{defaultBtnLabel}")
                   .form-group
                     label Button Style:
+                      a(colorpicker colorpicker-position="right" colorpicker-close-on-select ng-model="widget.button_color" ng-cloak) #[span  (or select a Custom Color)]
                     button.btn-style-a(ng-cloak ng-click="setTheme('style-a')") #[span {{ widget.button_label || '#{defaultBtnLabel}' }}]
                     button.btn-style-b(ng-cloak ng-click="setTheme('style-b')") #[span {{ widget.button_label || '#{defaultBtnLabel}' }}]
                 span.title Call Configuration
