--- a/views/widget/preview_widget.jade
+++ b/views/widget/preview_widget.jade
@@ -52,7 +52,7 @@ ul.nav.nav-tabs(ng-cloak)
     #button-preview(ng-show="previewButton")
       .not-supported#not-supported-message(ng-show="!showCallButton()" ng-bind-html="getHiddenButtonText()")
       .widget-box#launch_call_div(ng-class="widget.button_style" ng-show="showCallButton()")
-        button.btn-style.launch_call#launch_call_preview(ng-cloak ng-disabled="!widget.sip_uri" ng-click="makeCall()" qtip="You can click the button to make a call and test the service!<br>(save your configuration before you test)" qtip-disable="!isWebRTCSupported() || !preview_webrtc_compatible" qtip-title="Try it!") #[span {{widget.button_label || 'Call Sales'}}]
+        button.btn-style.launch_call#launch_call_preview(ng-style="{'background': widget.button_color, 'border': widget.button_color}" ng-cloak ng-disabled="!widget.sip_uri" ng-click="makeCall()" qtip="You can click the button to make a call and test the service!<br>(save your configuration before you test)" qtip-disable="!isWebRTCSupported() || !preview_webrtc_compatible" qtip-title="Try it!") #[span {{widget.button_label || 'Call Sales'}}]
         .widget-footer-left
           a(href="https://test.webrtc.org/" target="_blank") Test your setup
         .widget-footer-right
