--- a/views/widget/preview_widget.jade
+++ b/views/widget/preview_widget.jade
@@ -50,6 +50,10 @@ ul.nav.nav-tabs(ng-cloak)
             #vw-footer.vw-footer
               a(href="https://voxbone.com" target="_blank") powered by:
     #button-preview(ng-show="previewButton")
+      .hidden-not-supported(ng-show="!showCallButton() && widget.incompatible_browser_configuration === 'hide_widget'")
+        p.bg-info.text-center(style="padding: 5px")
+          i.glyphicon.glyphicon-exclamation-sign
+          span  The button is hidden because of the current config. Check the "Incompatible Browser Configuration" section to set it up.
       .not-supported#not-supported-message(ng-show="!showCallButton()" ng-bind-html="getHiddenButtonText()")
       .widget-box#launch_call_div(ng-class="widget.button_style" ng-show="showCallButton()")
         button.btn-style.launch_call#launch_call_preview(ng-style="{'background': widget.button_color, 'border': widget.button_color}" ng-cloak ng-disabled="!widget.sip_uri" ng-click="makeCall()" qtip="You can click the button to make a call and test the service!<br>(save your configuration before you test)" qtip-disable="!isWebRTCSupported() || !preview_webrtc_compatible" qtip-title="Try it!") #[span {{widget.button_label || 'Call Sales'}}]
