--- a/views/widget/preview_widget.jade
+++ b/views/widget/preview_widget.jade
@@ -7,7 +7,7 @@ ul.nav.nav-tabs(ng-cloak)
 
 .boxPanel.preview
   .prev-view.light
-    #widget-preview(ng-show="!previewButton")
+    #widget-preview(ng-cloak ng-show="!previewButton")
       .vox-widget-wrapper-preview
         .vw-main
           .vw-header
@@ -49,20 +49,20 @@ ul.nav.nav-tabs(ng-cloak)
                   li.vw-br #
             #vw-footer.vw-footer
               a(href="https://voxbone.com" target="_blank") powered by:
-    #button-preview(ng-show="previewButton")
+    #button-preview(ng-cloak ng-show="previewButton")
       .hidden-not-supported(ng-show="!showCallButton() && widget.incompatible_browser_configuration === 'hide_widget'")
         p.bg-info.text-center(style="padding: 5px")
           i.glyphicon.glyphicon-exclamation-sign
           span  The button is hidden because of the current config. Check the "Incompatible Browser Configuration" section to set it up.
-      .not-supported#not-supported-message(ng-show="!showCallButton()" ng-bind-html="getHiddenButtonText()")
-      .widget-box#launch_call_div(ng-class="widget.button_style" ng-show="showCallButton()")
+      .not-supported#not-supported-message(ng-cloak ng-show="!showCallButton()" ng-bind-html="getHiddenButtonText()")
+      .widget-box#launch_call_div(ng-cloak ng-class="widget.button_style" ng-show="showCallButton()")
         button.btn-style.launch_call#launch_call_preview(ng-style="{'background': widget.button_color, 'border': widget.button_color}" ng-cloak ng-disabled="!widget.sip_uri" ng-click="makeCall()" qtip="You can click the button to make a call and test the service!<br>(save your configuration before you test)" qtip-disable="!isWebRTCSupported() || !preview_webrtc_compatible" qtip-title="Try it!") #[span {{widget.button_label || 'Call Sales'}}]
         .widget-footer-left
           a(href="https://test.webrtc.org/" target="_blank") Test your setup
         .widget-footer-right
           a(href="https://voxbone.com" target="_blank") powered by:
     .preview-link
-      a(href="#" ng-click="previewButton = true; preview_webrtc_compatible = !preview_webrtc_compatible") {{ "Switch to " + (preview_webrtc_compatible ? "non-" : "") + "WebRTC Browser View" }}
+      a(ng-cloak href="#" ng-click="previewButton = true; preview_webrtc_compatible = !preview_webrtc_compatible") {{ "Switch to " + (preview_webrtc_compatible ? "non-" : "") + "WebRTC Browser View" }}
     .togle-bg
       a.dark(href="javascript:void(0)" ng-click="widget.background_style = 'dark'")
       a.grey(href="javascript:void(0)" ng-click="widget.background_style = 'grey'")
