Adding some additional settings to hide button options (#381)
* [#359] Add option to remove the button frame

* [#361] Option to remove branding and show test-setup link

--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -93,6 +93,19 @@
     padding-right:10px;
     text-align: center;
   }
+  &.no-frame{
+    display: inline-block !important;
+    background: none !important;
+    box-shadow: none !important;
+    padding: 0 35px 25px 35px;
+  }
+  &.no-frame.no-branding{
+    display: inline-block !important;
+    padding: 0px !important;
+  }
+  &.no-frame.ng-hide{
+    display: none !important;
+  }
   &.style-a{
     .boxShadow(1,0.2);
     background: #f5f5f7;
