--- a/public/stylesheets/less/vxb-button.less
+++ b/public/stylesheets/less/vxb-button.less
@@ -175,6 +175,19 @@
     text-align:center;
   }
 }
+
+.vxb-widget-box.no-frame{
+  display: inline-block !important;
+  background: none !important;
+  box-shadow: none !important;
+  padding: 0 35px 25px 35px;
+}
+
+.vxb-widget-box.no-frame.no-branding{
+  display: inline-block !important;
+  padding: 0px !important;
+}
+
 .vxb-widget-box.style-a {
   -moz-box-shadow:inset 0 0 5px 0 @color4,0 0 8px 0 rgba(0,0,0,.2);
   -webkit-box-shadow:inset 0 0 5px 0 @color4,0 0 8px 0 rgba(0,0,0,.2);
