--- a/views/voxbone_widget_div.jade
+++ b/views/voxbone_widget_div.jade
@@ -9,7 +9,8 @@
   data-caller_id=the_widget.caller_id || undefined
   data-incompatible_browser_configuration=the_widget.incompatible_browser_configuration || undefined
   data-dial_pad="#{the_widget.dial_pad}"
-  data-show_frame="true"
+  data-show_frame="#{the_widget.show_frame}"
+  data-show_branding="#{the_widget.show_branding}"
   data-server_url="#{process.env.APP_URL}"
   data-use_default_button_css="true"
   data-div_css_class_name=the_widget.button_style
