[voxbone-workshop/portal-widget#26] Ask for rating after the call ends options (#386)

--- a/views/voxbone_widget_div.jade
+++ b/views/voxbone_widget_div.jade
@@ -7,6 +7,7 @@
   data-context=the_widget.context || undefined
   data-send_digits=the_widget.send_digits || undefined
   data-caller_id=the_widget.caller_id || undefined
+  data-rating=(the_widget.rating !== true) ? "#{the_widget.rating}" : undefined
   data-incompatible_browser_configuration=the_widget.incompatible_browser_configuration || undefined
   data-dial_pad="#{the_widget.dial_pad}"
   data-show_frame="#{the_widget.show_frame}"
