--- a/views/voxbone_widget_div.jade
+++ b/views/voxbone_widget_div.jade
@@ -1,5 +1,5 @@
 .voxButton(
-  data-button_id="#{the_widget._id}"
+  data-button_id=((the_widget._id === undefined) ? undefined : "#{the_widget._id}")
   data-text="#{label}"
   data-redirect_url=the_widget.link_button_to_a_page || undefined
   data-did="#{did}"
@@ -7,13 +7,15 @@
   data-context=the_widget.context || undefined
   data-send_digits=the_widget.send_digits || undefined
   data-caller_id=the_widget.caller_id || undefined
-  data-rating=(the_widget.rating !== true) ? "#{the_widget.rating}" : undefined
   data-incompatible_browser_configuration=the_widget.incompatible_browser_configuration || undefined
-  data-dial_pad=(the_widget.dial_pad !== true) ? "#{the_widget.dial_pad}" : undefined
-  data-show_frame=(the_widget.show_frame !== true) ? "#{the_widget.show_frame}" : undefined"
-  data-show_branding=(the_widget.show_branding !== true) ? "#{the_widget.show_branding}" : undefined"
   data-server_url="#{process.env.APP_URL}"
   data-use_default_button_css="true"
   data-div_css_class_name=the_widget.button_style
+  data-voxbone_webrtc_username=(the_widget.webrtc_username === undefined ? undefined : "#{the_widget.webrtc_username}")
+  data-voxbone_webrtc_password=(the_widget.webrtc_password === undefined ? undefined : "#{the_widget.webrtc_password}")
+  data-rating=((the_widget.rating === undefined || the_widget.rating) ? undefined : "#{the_widget.rating}")
+  data-dial_pad=((the_widget.dial_pad === undefined || the_widget.dial_pad) ? undefined : "#{the_widget.dial_pad}")
+  data-show_frame=((the_widget.show_frame === undefined || the_widget.show_frame) ? undefined : "#{the_widget.show_frame}")
+  data-show_branding=((the_widget.show_branding === undefined || the_widget.show_branding) ? undefined : "#{the_widget.show_branding}")
 )
 script(src="#{script}")
