[MISC] Enhancing button CSS

--- a/public/stylesheets/less/vxb-widget.less
+++ b/public/stylesheets/less/vxb-widget.less
@@ -65,6 +65,7 @@
           margin:0 -2.5px;
           text-align:center;
           color:#9b9b9b;
+          border: 0;
           border-left:1px solid #d3d3d4;
         }
         a:last-child {
@@ -267,6 +268,7 @@
     text-align:center;
     -webkit-border-radius:4px;
     -moz-border-radius:4px;
+    border: 0;
     border-radius:4px;
     i {
       vertical-align:middle;
@@ -455,6 +457,7 @@
           background-size:60px 12.5px;
           background-position:right center;
           background-repeat:no-repeat;
+          border: 0;
           color:#8b8b8b;
         }
       }
