--- a/views/widget/new.jade
+++ b/views/widget/new.jade
@@ -94,7 +94,8 @@ block content
                           label
                             input(type='checkbox' name='show_branding' ng-model='widget.show_branding' disabled="#{currentUser.paid}")
                             span.radio-name Show branding
-                            span.badge(data-toggle='tooltip' data-placement="right" title="Toggles Voxbone branding from button and popup") ?
+                            a(href="mailto:workshop@voxbone.com?subject=%5BCLICK2VOX%5D%20About%20Removing%20Branding" target='_blank')
+                              span.badge(data-toggle='tooltip' data-placement="right" title="Toggles Voxbone branding from button and popup. Click to contact us to have this removed") ?
 
                 span.title Call Configuration
                 .boxPanel
