--- a/views/signup.jade
+++ b/views/signup.jade
@@ -47,6 +47,7 @@ block content
 
                 form#create_account(ng-controller="SignUpController" name="create_account" ng-init="account.uemail='#{email || ''}'" novalidate)
                   input.form-control(type="hidden" id="ureference" name="ureference" ng-model="account.ureference" ng-init="account.ureference='#{reference || ''}'")
+                  input.form-control(type="hidden" id="ureferrer" name="ureferrer" ng-model="account.ureferrer" ng-init="account.ureferrer='#{referrer || ''}'")
                   .form-group
                     label.control-label First Name
                     input.form-control(type="text" id="ufirstname" name="ufirstname" ng-model="account.ufirstname" required)
