--- a/views/account/contact-voxbone-modal.jade
+++ b/views/account/contact-voxbone-modal.jade
@@ -8,7 +8,10 @@
           i.glyphicon.glyphicon-exclamation-sign
           span  Add an Additional SIP URI
       .modal-body
-        p#[strong Coming Soon.] To add an additional SIP URI you will need to upgrade to a paid account. Please contact us using one of the buttons below for more information.
+        p#[strong Thanks!]
+        p We will review your request and get back to you soon.
+        p#[strong Can’t wait?]
+        p Please contact us using one of the buttons below.
       .modal-footer
         button.btn.btn-purple(type="button" id="callVoxbone") Click to Call Us
         a(href="mailto:workshop@voxbone.com?subject=%5BCLICK2VOX%5D%20About%20Upgrading")
